correction mb collapse

--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -4,7 +4,7 @@
   }
 
   .collapse {
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
 
     .toggle {
       font-size: 2.4rem;
